--- a/views/books/form.ejs
+++ b/views/books/form.ejs
@@ -27,13 +27,8 @@
                id="inputAuthors">
     </div>
  
-    <div class="form-group">
-        <label for="inputFavorite">Рекомендуемая</label>
-        <input type="text"
-               value="<%= book.favorite %>"
-               name="favorite"
-               class="form-control"
-               id="inputFavorite">
+    <div class="checkbox"> 
+        <label><input type="checkbox" value="">Рекомендуемая</label>
     </div>
 
     <div class="form-group">
