--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -23,18 +23,18 @@
                         <td><%= el.title %></td>
                         <td><%= el.authors %></td>
                         <td class="text-right">
-                            <a class="btn btn-sm btn-success" href="/books/<%= el.id %>">
+                            <a class="btn btn-sm btn-success" href="/books/<%= el._id %>">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </a>
-                            <a class="btn btn-sm btn-primary" href="/books/update/<%= el.id %>">
+                            <a class="btn btn-sm btn-primary" href="/books/update/<%= el._id %>">
                                 <i class="fa fa-pencil" aria-hidden="true"></i>
                             </a>
-                            <form action="/books/delete/<%= el.id %>" method="POST" class="d-inline">
+                            <form action="/books/delete/<%= el._id %>" method="POST" class="d-inline">
                                 <button class="btn btn-sm btn-danger">
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </button>
                             </form>
-                            <form action="/books/<%= el.id %>/download" method="GET" class="d-inline">
+                            <form action="/books/<%= el._id %>/download" method="GET" class="d-inline">
                                 <button class="btn btn-sm btn-warning">
                                     <i class="fa fa-download" aria-hidden="true"></i>
                                 </button>
