--- a/views/books/view.ejs
+++ b/views/books/view.ejs
@@ -40,10 +40,10 @@
                 </table>
 
                 <div class="text-right">
-                    <a class="btn btn-sm btn-primary" href="/books/update/<%= book.id %>">
+                    <a class="btn btn-sm btn-primary" href="/books/update/<%= book._id %>">
                         <i class="fa fa-pencil" aria-hidden="true"></i>
                     </a>
-                    <form action="/books/delete/<%= book.id %>" method="POST" class="d-inline">
+                    <form action="/books/delete/<%= book._id %>" method="POST" class="d-inline">
                         <button class="btn btn-sm btn-danger">
                             <i class="fa fa-trash" aria-hidden="true"></i>
                         </button>
